--- a/probability-homework.ipynb
+++ b/probability-homework.ipynb
@@ -135,8 +135,8 @@
    "metadata": {},
    "source": [
     "#### Proof \n",
-    "$\\sigma=E[(X−\\mu)^2]=E[(X−E[X])^2]=E[X^2−2XE[X]+(E[X])^2]=\\\\=E[X^2]−2E[XE[X]]+E[(E[X])^2]=E[X2]−2E[X]E[X]+E[(E[X])^2]=\\\\=E[X2]−2(E[X])^2+(E[X])^2\n",
-    "=E[X^2]−(E[X])^2$\n"
+    "$\\sigma=E((X−\\mu)^2)=E((X−E(X))^2)=E(X^2−2XE(X)+(E(X))^2)=\\\\=E(X^2)−2E(XE(X))+E((E(X))^2)=E(X^2)−2E(X)E(X)+E((E(X))^2)=\\\\=E(X^2)−2(E(X))^2+(E(X))^2\n",
+    "=E(X^2)−(E(X))^2$\n"
    ]
   },
   {
