--- a/calculus-1-homework.ipynb
+++ b/calculus-1-homework.ipynb
@@ -122,7 +122,7 @@
     "Let $\\bar{B}_(x,r)$ be a closed ball with radius $r$, if $X=\\bar{B}_(x,r)$ then $X^c=\\emptyset$ is open, hence $\\bar{B}_(x,r)$ is closed. <br>\n",
     "If $X \\neq ∅$, take $y ∈ X \\setminus \\bar{B}(x, r)$.<br>\n",
     "Then $\\epsilon = d(x, y) − r > 0$. If $x \\in B(y, \\epsilon)$, then <br>\n",
-    "$d(x, z) ≥ d(x, y) − d(y, z) > d(x, y) − \\epsilon = r$ <br>\n",
+    "$d(x, z) \\geq d(x, y) - d(y, z) > d(x, y) − \\epsilon = r$ <br>\n",
     "showing that $(y, c) \\subset (\\bar{B}(x, r))^c $ <br>\n",
     "Since this holds for any $y \\notin B(x, r), (B(x, r))^c$ is open hence $\\bar{B}_(x,r)$ is closed<br>\n"
    ]
